--- a/site/_static/header-test.html
+++ b/site/_static/header-test.html
@@ -12,6 +12,9 @@
         .outline-red {
             outline: 1px dashed red;
         }
+        .outline-green {
+            outline: 1px dotted green;
+        }
 
         .margin-center {
             width: fit-content;
@@ -42,22 +45,22 @@
         <h1>Centering</h1>
     </div>
     <div class="outline-blue">
-        <h2 style="text-align: center;" class="outline-red">(x) text-align: center;</h2>
+        <h3 style="text-align: center;" class="outline-red">(x) text-align: center;</h3>
     </div>
     <div class="outline-blue">
-        <h2 class="margin-center outline-red">(x) margin: auto;</h2>
+        <h3 class="margin-center outline-red">(x) margin: auto;</h3>
     </div>
     <div style="height: 100px; display: flex;" class="outline-blue">
-        <h2 class="margin-center outline-red">(x,y) display: flex (container); margin: auto auto; (element)</h2>
+        <h3 class="margin-center outline-red">(x,y) display: flex (container); margin: auto auto; (element)</h3>
     </div>
     <div style="height: 100px; display: flex; align-items: center; justify-content: center;" class="outline-blue">
-        <h2 class="outline-red">(x,y) display: flex; align-items: center; justify-content: center;</h2>
+        <h3 class="outline-red">(x,y) display: flex; align-items: center; justify-content: center;</h3>
     </div>
     <div style="height: 100px; position: relative;" class="outline-blue">
-        <h2 class="transform-center-abs outline-red">(x,y) position: absolute; transform: translate</h2>
+        <h3 class="transform-center-abs outline-red">(x,y) position: absolute; transform: translate</h3>
     </div>
     <div style="height: 100px; width: 100wv;" class="outline-blue">
-        <h2 class="transform-center-rel outline-red">(y) position: relative; transform: translateY</h2>
+        <h3 class="transform-center-rel outline-red">(y) position: relative; transform: translateY</h3>
     </div>
 
 
@@ -87,25 +90,25 @@
         <h1>Right alignment</h1>
     </div>
     <div class="outline-blue">
-        <h2 style="text-align: right;" class="outline-red">(x) text-align: right;</h2>
+        <h3 style="text-align: right;" class="outline-red">(x) text-align: right;</h3>
     </div>
     <div class="outline-blue">
-        <h2 class="margin-right outline-red">(x rhs) margin-left: auto;</h2>
+        <h3 class="margin-right outline-red">(x rhs) margin-left: auto;</h3>
     </div>
     <div style="height: 100px; display: flex;" class="outline-blue">
-        <h2 class="margin-right outline-red">(x,y) display: flex (container); margin-left: auto; (element)</h2>
+        <h3 class="margin-right outline-red">(x,y) display: flex (container); margin-left: auto; (element)</h3>
     </div>
     <div style="height: 100px; display: flex; align-items: center; justify-content: right;" class="outline-blue">
-        <h2 class="outline-red">(x,y) display: flex; align-items: center; justify-content: center;</h2>
+        <h3 class="outline-red">(x,y) display: flex; align-items: center; justify-content: center;</h3>
     </div>
     <div style="height: 100px; position: relative;" class="outline-blue">
-        <h2 class="position-rhs-abs outline-red">(x,y) position: absolute; right: 0;</h2>
+        <h3 class="position-rhs-abs outline-red">(x,y) position: absolute; right: 0;</h3>
     </div>
     <div style="height: 100px; width: 100wv;" class="outline-blue">
-        <h2 class="position-rhs-rel outline-red">(y) position: relative; right: 0;</h2>
+        <h3 class="position-rhs-rel outline-red">(y) position: relative; right: 0;</h3>
     </div>
     <div style="height: 100px; width: 100wv;" class="outline-blue">
-        <h2 class="float-rhs outline-red">(y) float: right;</h2>
+        <h3 class="float-rhs outline-red">(y) float: right;</h3>
     </div>
 
 
@@ -116,41 +119,37 @@
             display: block;
             max-width: 100vw;
             padding: 0;
-            position: sticky;
-            top: 0;
-            width: 100%;
-            outline: 1px solid blue;
+            position: relative;
+            /* top: 0; */
+            width: 80%;
+            height: 5.6rem;
             /* float: left; */
             /* z-index: 1030 */
         }
 
-        .iblock-left {
+        .iblock {
             display: inline-block;
-            height: 5.6rem;
-            outline: 1px solid blue;
         }
 
-        .iblock-right {
+        .iblock-container-right {
             display: inline-block;
             width: fit-content;
             position: absolute;
             right: 0;
-            height: 5.6rem;
-            outline: 1px solid blue;
         }
     </style>
     <div>
-        <h1>Left-right elements with absolute positioning</h1>
+        <h1>Left-right inline-block elements with absolute positioning</h1>
     </div>
-    <div class="iblock-container">
-        <div class="iblock-left">
+    <div class="iblock-container outline-blue">
+        <div class="iblock transform-center-rel outline-red">
             <p>Left</p>
         </div>
-        <div class="iblock-right">
-            <div class="iblock-left">
+        <div class="iblock-container-right outline-red  transform-center-rel">
+            <div class="iblock outline-green">
                 <p>Right1</p>
             </div>
-            <div class="iblock-left">
+            <div class="iblock outline-green">
                 <p>Right2</p>
             </div>
         </div>
@@ -165,44 +164,40 @@
             float: left;
             max-width: 100vw;
             padding: 0;
-            position: sticky;
+            position: relative;
             top: 0;
-            width: 100%;
-            outline: 1px solid blue;
+            width: 80%;
+            height: 5.6rem;
             /* float: left; */
             /* z-index: 1030 */
         }
 
-        .float-left {
+        .float-elem {
             display: block;
             float: left;
             position: relative;
-            height: 5.6rem;
-            outline: 1px solid blue;
         }
 
-        .float-right {
+        .float-container-right {
             display: block;
             float: right;
             width: fit-content;
             position: absolute;
             right: 0;
-            height: 5.6rem;
-            outline: 1px solid blue;
         }
     </style>
     <div>
-        <h1>Left-right elements with float</h1>
+        <h1>Left-right block elements with float</h1>
     </div>
-    <div class="float-container">
-        <div class="float-left">
+    <div class="float-container outline-blue">
+        <div class="float-elem transform-center-rel outline-red">
             <p>Left</p>
         </div>
-        <div class="float-right">
-            <div class="float-left">
+        <div class="float-container-right transform-center-rel outline-red">
+            <div class="float-elem outline-green">
                 <p>Right1</p>
             </div>
-            <div class="float-left">
+            <div class="float-elem outline-green">
                 <p>Right2</p>
             </div>
         </div>
