--- a/site/_static/header-test.html
+++ b/site/_static/header-test.html
@@ -119,6 +119,7 @@
             display: block;
             max-width: 100vw;
             padding: 0;
+            position: -webkit-sticky;
             position: relative;
             /* top: 0; */
             width: 80%;
@@ -129,6 +130,7 @@
 
         .iblock {
             display: inline-block;
+            margin-right: 1rem;
         }
 
         .iblock-container-right {
@@ -160,11 +162,11 @@
         .float-container {
             /* justify-content: center; */
             background-color: lightblue;
-            display: block;
-            float: left;
+            display: inline-block;
+            /* float: left; */
             max-width: 100vw;
             padding: 0;
-            position: relative;
+            position: sticky;
             top: 0;
             width: 80%;
             height: 5.6rem;
@@ -173,17 +175,20 @@
         }
 
         .float-elem {
-            display: block;
-            float: left;
-            position: relative;
+            /* inline-block also works without float */
+            display: inline-block;
+            /* display: block;
+            float: left; */
+            /* position: relative; */
+            margin-right: 0.5rem;
         }
 
         .float-container-right {
-            display: block;
+            display: inline-block;
             float: right;
-            width: fit-content;
-            position: absolute;
-            right: 0;
+            /* width: fit-content; */
+            /* position: absolute; */
+            /* right: 0; */
         }
     </style>
     <div>
