set width for margin centering

--- a/site/_static/header-test.html
+++ b/site/_static/header-test.html
@@ -17,7 +17,7 @@
         }
 
         .margin-center {
-            width: fit-content;
+            width: 20rem;
             margin: auto auto;
         }
 
