add complex examples

--- a/site/_static/tests/header-test.html
+++ b/site/_static/tests/header-test.html
@@ -162,7 +162,7 @@
         .float-container {
             /* justify-content: center; */
             background-color: lightblue;
-            display: inline-block;
+            display: block;
             /* float: left; */
             max-width: 100vw;
             padding: 0;
@@ -174,36 +174,99 @@
             /* z-index: 1030 */
         }
 
-        .float-elem {
+        .float-elem-middle {
             /* inline-block also works without float */
             display: inline-block;
+            vertical-align: middle;
             /* display: block;
             float: left; */
             /* position: relative; */
+            /* padding: 0;
+            margin: 0; */
+            margin-right: 0.5rem;
+        }
+
+        .float-elem-top {
+            /* inline-block also works without float */
+            display: inline-block;
+            vertical-align: top;
+            /* display: block;
+            float: left; */
+            /* position: relative; */
+            /* padding: 0;
+            margin: 0; */
             margin-right: 0.5rem;
         }
 
         .float-container-right {
-            display: inline-block;
+            display: block;
             float: right;
+            /* height: 5.6rem; */
             /* width: fit-content; */
             /* position: absolute; */
             /* right: 0; */
         }
+        .float-container-right-height {
+            display: block;
+            float: right;
+            height: 5.6rem;
+        }
+        div p {
+            outline: 1px dashed blue;
+        }
     </style>
     <div>
-        <h1>Left-right block elements with float</h1>
+        <h1>Left-right vertical-alignment: middle inline-block elements, with float and container centering</h1>
     </div>
     <div class="float-container outline-blue">
-        <div class="float-elem transform-center-rel outline-red">
+        <div class="float-elem-middle transform-center-rel outline-red">
             <p>Left</p>
         </div>
         <div class="float-container-right transform-center-rel outline-red">
-            <div class="float-elem outline-green">
+            <div class="float-elem-middle outline-green">
                 <p>Right1</p>
             </div>
-            <div class="float-elem outline-green">
+            <div class="float-elem-middle outline-green" style="font-size: 1.5rem">
                 <p>Right2</p>
+            </div>
+            <div class="float-container-right outline-green">
+                <div class="float-elem-middle  outline-green">
+                    <p>Right3a</p>
+                </div>
+                <div class="float-elem-middle outline-green" style="font-size: 1.5rem">
+                    <p>Right3b</p>
+                </div>
+                <div class="float-elem-middle outline-green">
+                    <p>Right3c</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <h1>Left-right vertical-alignment: top inline-block elements, with float and element centering</h1>
+    </div>
+    <div class="float-container outline-blue">
+        <div class="float-elem-top transform-center-rel outline-red">
+            <p>Left</p>
+        </div>
+        <div class="float-container-right-height outline-red">
+            <div class="float-elem-top transform-center-rel outline-green">
+                <p>Right1</p>
+            </div>
+            <div class="float-elem-top transform-center-rel outline-green" style="font-size: 1.5rem">
+                <p>Right2</p>
+            </div>
+            <div class="float-container-right-height outline-green">
+                <div class="float-elem-top transform-center-rel  outline-green">
+                    <p>Right3a</p>
+                </div>
+                <div class="float-elem-top transform-center-rel outline-green" style="font-size: 1.5rem">
+                    <p>Right3b</p>
+                </div>
+                <div class="float-elem-top transform-center-rel outline-green">
+                    <p>Right3c</p>
+                </div>
             </div>
         </div>
     </div>
