--- a/site/_static/tests/header-test.html
+++ b/site/_static/tests/header-test.html
@@ -113,27 +113,22 @@
 
 
     <style>
-        .iblock-container {
-            /* justify-content: center; */
+        .block-position-rel-container {
             background-color: lightblue;
             display: block;
             max-width: 100vw;
             padding: 0;
-            position: -webkit-sticky;
             position: relative;
-            /* top: 0; */
             width: 80%;
             height: 5.6rem;
-            /* float: left; */
-            /* z-index: 1030 */
+            max-height: 5.6rem;
         }
 
         .iblock {
             display: inline-block;
-            margin-right: 1rem;
         }
 
-        .iblock-container-right {
+        .iblock-position-right {
             display: inline-block;
             width: fit-content;
             position: absolute;
@@ -143,11 +138,11 @@
     <div>
         <h1>Left-right inline-block elements with absolute positioning</h1>
     </div>
-    <div class="iblock-container border-blue">
+    <div class="block-position-rel-container border-blue">
         <div class="iblock transform-center-rel border-red">
             <p>Left</p>
         </div>
-        <div class="iblock-container-right border-red  transform-center-rel">
+        <div class="iblock-position-right border-red  transform-center-rel">
             <div class="iblock border-green">
                 <p>Right1</p>
             </div>
@@ -160,10 +155,8 @@
 
     <style>
         .block-container {
-            /* justify-content: center; */
             background-color: lightblue;
             display: block;
-            /* float: left; */
             max-width: 100vw;
             padding: 0;
             position: sticky;
@@ -171,43 +164,21 @@
             width: 80%;
             height: 5.6rem;
             max-height: 5.6rem;
-            /* float: left; */
-            /* z-index: 1030 */
         }
 
-        .iblock-elem {
-            display: inline-block;
-        }
-
-        .iblock-elem-middle {
+        .iblock-middle {
             display: inline-block;
             vertical-align: middle;
-            /* display: block;
-            float: left; */
-            /* position: relative; */
-            /* padding: 0;
-            margin: 0; */
-            /* margin-right: 0.5rem; */
         }
 
-        .iblock-elem-top {
+        .iblock-top {
             display: inline-block;
             vertical-align: top;
-            /* display: block;
-            float: left; */
-            /* position: relative; */
-            /* padding: 0;
-            margin: 0; */
-            /* margin-right: 0.5rem; */
         }
 
         .block-float-right {
             display: block;
             float: right;
-            /* height: 5.6rem; */
-            /* width: fit-content; */
-            /* position: absolute; */
-            /* right: 0; */
         }
 
         .height {
@@ -223,24 +194,24 @@
         <h1>Left-right vertical-alignment: middle inline-block elements, with float and container centering</h1>
     </div>
     <div class="block-container border-blue">
-        <div class="iblock-elem-middle transform-center-rel border-red">
+        <div class="iblock-middle transform-center-rel border-red">
             <p>Left</p>
         </div>
         <div class="block-float-right transform-center-rel border-red">
-            <div class="iblock-elem-middle border-green">
+            <div class="iblock-middle border-green">
                 <p>Right1</p>
             </div>
-            <div class="iblock-elem-middle border-green" style="font-size: 1.5rem">
+            <div class="iblock-middle border-green" style="font-size: 1.5rem">
                 <p>Right2</p>
             </div>
-            <div class="iblock-elem border-green">
-                <div class="iblock-elem-middle border-green">
+            <div class="iblock border-green">
+                <div class="iblock-middle border-green">
                     <p>Right3a</p>
                 </div>
-                <div class="iblock-elem-middle border-green" style="font-size: 1.5rem">
+                <div class="iblock-middle border-green" style="font-size: 1.5rem">
                     <p>Right3b</p>
                 </div>
-                <div class="iblock-elem-middle border-green">
+                <div class="iblock-middle border-green">
                     <p>Right3c</p>
                 </div>
             </div>
@@ -251,25 +222,25 @@
         <h1>Left-right vertical-alignment: top inline-block elements, with float and element centering</h1>
     </div>
     <div class="block-container border-blue">
-        <div class="iblock-elem-top transform-center-rel border-red">
+        <div class="iblock-top transform-center-rel border-red">
             <p>Left</p>
         </div>
         <div class="block-float-right height border-red">
-            <div class="iblock-elem-top transform-center-rel border-green">
+            <div class="iblock-top transform-center-rel border-green">
                 <p>Right1</p>
             </div>
-            <div class="iblock-elem-top transform-center-rel border-green" style="font-size: 1.5rem">
+            <div class="iblock-top transform-center-rel border-green" style="font-size: 1.5rem">
                 <p>Right2</p>
             </div>
             <!-- contained container must be inline block, not float block -->
             <div class="iblock height border-green">
-                <div class="iblock-elem-top transform-center-rel  border-green">
+                <div class="iblock-top transform-center-rel  border-green">
                     <p>Right3a</p>
                 </div>
-                <div class="iblock-elem-top transform-center-rel border-green" style="font-size: 1.5rem">
+                <div class="iblock-top transform-center-rel border-green" style="font-size: 1.5rem">
                     <p>Right3b</p>
                 </div>
-                <div class="iblock-elem-top transform-center-rel border-green">
+                <div class="iblock-top transform-center-rel border-green">
                     <p>Right3c</p>
                 </div>
             </div>
